--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,23 +1,11 @@
 image: medokin/ember-cli-test:latest
 
-cache:
-  untracked: true
-  key: "$CI_BUILD_REF_NAME"
-  paths:
-    - node_modules/
-    - bower_components/
+before_script:
+  - npm install
+  - bower install --allow-root
 
 stages:
-  - setup
   - test
-
-setup:
-  stage: setup
-  script:
-    - npm install
-    - bower install --allow-root
-  tags:
-    - docker
 
 tests:
   stage: test
